fix(incoming-task): fix-incoming-task-overflow-issue

--- a/packages/contact-center/cc-components/src/components/task/CallControlCAD/call-control-cad.styles.scss
+++ b/packages/contact-center/cc-components/src/components/task/CallControlCAD/call-control-cad.styles.scss
@@ -117,3 +117,9 @@
     color: var(--mds-color-theme-indicator-secure);
   }
 }
+
+.customer-name::part(text),
+.phone-number::part(text) {
+  white-space: normal !important;
+  word-break: break-all;
+}
